# stackage-parse

./: CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project  flake.nix  hie.yaml  stackage-parse.cabal
.github/workflows/: cabal.yaml  ci.yaml  nix.yaml  style.yaml
app/: Main.hs
clc-stackage/exclude/: nightly-2022-06-17  nightly-2023-04-05  nightly-2023-08-06  nightly-2024-02-18  nightly-2024-03-26
docs/: Stackage-API.html  Stackage-Args.html  Stackage-Data-Request-Internal.html  Stackage-Data-Request.html  Stackage-Data-Response.html  Stackage-Runner.html  Stackage-Utils.html  Stackage.html  doc-index.html  doc-index.json  index.html  stackage-parse.haddock
docs/src/: Stackage.API.html  Stackage.Args.html  Stackage.Data.Request.Internal.html  Stackage.Data.Request.html  Stackage.Data.Response.html  Stackage.Runner.html  Stackage.Utils.html  Stackage.html
examples/: clc-stackage-include  clc-stackage-inclusions  exclude  exclusions  stackage.json
examples/exclude/: lens-no-aeson
examples/include/: lens  pipes
src/: Stackage.hs
src/Stackage/: API.hs  Args.hs  Runner.hs  Utils.hs
src/Stackage/Data/: Request.hs  Response.hs  Snapshot.hs
src/Stackage/Data/Request/: Internal.hs
test/functional/: Main.hs
test/unit/: Main.hs
tools/: format.sh  haddock.sh
