cabal-version:      2.4
name:               stackage-parse
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.2.7 || ==9.4.4
copyright:          2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/stackage-parse/
bug-reports:        https://github.com/tbidne/stackage-parse/issues
synopsis:           Template
description:        Template
category:           Template
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/stackage-parse

common common-lang
  default-extensions:
    NoFieldSelectors
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedRecordDot
    OverloadedRecordUpdate
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilyDependencies
    TypeOperators

library
  import:           common-lang
  exposed-modules:
    Stackage
    Stackage.API
    Stackage.Args
    Stackage.Data.Response
    Stackage.Data.Snapshot
    Stackage.Runner

  build-depends:
    , aeson                 >=2.0       && <2.2
    , base                  >=4.16.0.0  && <4.18
    , bytestring            ^>=0.11.1.0
    , http-client-tls       ^>=0.3
    , http-types            ^>=0.12.3
    , optparse-applicative  >=0.16.1.0  && <0.18
    , servant               ^>=0.19
    , servant-client        ^>=0.19

  hs-source-dirs:   src
  default-language: Haskell2010

executable stackage-parse
  import:           common-lang
  main-is:          Main.hs
  build-depends:
    , base
    , stackage-parse

  hs-source-dirs:   app
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: Haskell2010

test-suite functional
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test/functional
  default-language: GHC2021
  build-depends:
    , aeson
    , base
    , bytestring
    , env-guard        ^>=0.2
    , package-version  ^>=0.3
    , stackage-parse
    , tasty            >=1.1.0.3 && <1.5
    , tasty-hunit      >=0.9     && <0.11
    , text             >=1.2.3.2 && <2.1
